# lawt-mindseye

./: Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: app.py
src/lawt/: __init__.py
src/lawt/core/: event.py  memory.py  time_labeler.py
src/lawt/engine/: decision.py  mindseye.py  rules.py
tests/: test_decision.py  test_rules.py  test_time_labeler.py
